[package]
name = "nicktracker"
version = "0.1.2"
authors = ["ttappr <tmtappr@gmail.com>"]
edition = "2018"

[lib]
name = "nicktracker"
crate-type = ["cdylib"]
 
[dependencies]
fallible-iterator = "0.2"
hexchat_api = { path = "../hexchat_api" }
#hexchat_api = { git = "https://github.com/ttappr/hexchat_api.git", branch = "main" }
regex = "1"
rusqlite = { version = "0.24", features = ["functions", "bundled"] }
serde_json = "1.0"
threadpool = "1.8"
ureq = { version = "2.0" }
urlparse = "0.7"

