[package]
name = "nicktracker"
version = "0.1.4"
authors = ["ttappr <tmtappr@gmail.com>"]
edition = "2018"

[lib]
name = "nicktracker"
crate-type = ["cdylib"]
 
[dependencies]
fallible-iterator = "0.3"
#hexchat-api = "0.2.*"
hexchat-api = { path = "../hexchat-api" }
regex = "1"
rusqlite = { version = "0.30", features = ["functions", "bundled"] }
serde_json = "1.0"
threadpool = "1.8"
ureq = { version = "2.0" }
urlparse = "0.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1