[package]
name = "nicktracker"
version = "0.1.10"
authors = ["ttappr <tmtappr@gmail.com>"]
edition = "2018"

[lib]
name = "nicktracker"
crate-type = ["cdylib"]
 
[dependencies]
fallible-iterator = "0.3"
hexchat-api = "0.3.6"
#hexchat-api = { path = "../hexchat-api" }
#hexchat-api = { git = "https://github.com/ttappr/hexchat-api.git"}
regex = "1.12"
rusqlite = { version = "0.37", features = ["functions", "bundled"] }
serde_json = "1.0"
threadpool = "1.8"
ureq = { version = "3.1" }
urlparse = "0.7"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1